# document_question_and_answer

./: README.md  main.py  pyproject.toml  requirements.txt
src/: main.py
src/agents/prompts/: paragraph_summarization_prompt.py  response_prompt.py
src/app/: app.py
src/database/: vectorstore.py
src/document_processor/: processor.py
src/utils/: utils.py
test/: test_utils.py  test_vectorstore.py
